[B]1.0.6[/B]
- Fixed a bug where videos could not be played if category ID was defined

[B]1.0.5[/B]
- Fixed a bug where categories would not be reported correctly

[B]1.0.4[/B]
- Changed versioning scheme to differentiate frodo from eden branch

[B]1.0.3[/B]
- Fixed a crash when a video does not have a mp4 or m3u8 entry in the feed

[B]1.0.2[/B]
- Updated xbmc.python version and language tag for plugin

[B]1.0.1[/B]
- Initial release